# srtparse

./: Cargo.toml  README.md
data/: underworld.srt
src/: error.rs  item.rs  lib.rs  parser.rs  reader.rs  subtitle.rs  time.rs
