[package]
name = "srtparse"
version = "0.1.1"

description = "A library for parsing SRT Subtitles"
keywords = ["srt", "subtitle", "subtitles"]
authors = ["Kilte Leichnam <nwotnbm@gmail.com>", "Ross Nomann <rossnomann@protonmail.com>"]

homepage = "https://docs.rs/srtparse"
documentation = "https://docs.rs/srtparse"
repository = "https://github.com/rossnomann/srtparse"

readme = "README.md"
license = "MIT"

exclude = ["data/*"]
